--- a/readerspalacev1/src/styles/home.css
+++ b/readerspalacev1/src/styles/home.css
@@ -1,39 +1,27 @@
 /* src/styles/Home.css */
-.hero-section {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.hero-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: white;
-}
-
-.loading-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-/* Add more styles as needed */
+.home section {
+    margin: 20px;
+    padding: 10px;
+  }
+  
+  .hero-header {
+    background-color: #D4AF37; /* Gold */
+    color: #002366; /* Deep Blue */
+  }
+  
+  .feature-section, .features-list, .benefits, .cta, .gallery, .faq, .testimonials, .final-cta {
+    border: 1px solid #A17A74; /* Burnished Bronze */
+    background-color: #FFFFF0; /* Ivory */
+  }
+  
+  button {
+    background-color: #002366; /* Deep Blue */
+    color: #FFFFF0; /* Ivory */
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #D4AF37; /* Gold */
+  }
