--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -1,13 +1,25 @@
 /* src/components/HeroSection.css */
 .herosection {
-    background-image: url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG'); /* Adjust path as necessary */
+    position: relative;
+    background-image: url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG');
     background-size: cover;
     background-position: center;
-    height: 100vh; /* Adjust height as needed */
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white; /* Ensuring text is readable, adjust based on your image */
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); /* Optional: Adds shadow to text for better readability */
+    color: white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  
+  .herosection::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the color and opacity to get the desired tint */
+    z-index: -1; /* Ensures the tint is behind the content */
   }
