--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -11,6 +11,7 @@
     align-items: center;
     color: white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    opacity: 0.5;
   }
   
   .herosection::before {
