--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -20,6 +20,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the color and opacity to get the desired tint */
-
+    background-color: rgba(0, 0, 0, 1); /* Adjust the color and opacity to get the desired tint */
+    z-index: -1; /* Ensures the tint is behind the content */
 }
