--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -1,4 +1,4 @@
-/* src/components/HeroSection.css */
+/* src/styles/heroSection.css */
 .herosection {
     position: relative;
     background-image: url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG');
@@ -11,17 +11,15 @@
     align-items: center;
     color: white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  
+}
 
-  .hero-section-container {
+.herosection::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.9);
-    z-index: -1;
+    background-color: rgba(0, 0, 0, 0.9); /* Adjust the color and opacity to get the desired tint */
+    z-index: 0; /* Ensures the tint is behind the content but above the background image */
 }
-
