--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -1,7 +1,6 @@
-/* src/styles/heroSection.css */
 .herosection {
     position: relative;
-    background-image: url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG'); /* Use a relative path */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -11,15 +10,4 @@
     align-items: center;
     color: white;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.herosection::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
-    z-index: -1; /* Place it behind the content but within the .herosection */
 }
