--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -15,4 +15,5 @@
 .herosection h1 {
     font-size: 48px; /* Adjust this value to make the header bigger */
     /* other styles for the header, if necessary */
+    padding: 2rem;
 }
