--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -15,8 +15,9 @@
 .herosection h1 {
     font-size: 48px;
     text-align: center;
+
 }
 
-.herosection p {
-    font-size: 16px;
+.herosection p { font-size: 38px;
+    
 }
