--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -1,27 +1,70 @@
 .herosection {
     position: relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/assets/ReadersPalaceHero.JPG');
+    height: 100vh;
+    overflow: hidden;
+}
+
+.herosection .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-image: url('https://res.cloudinary.com/dhriwtfjq/image/upload/v1711762095/IMG_1716_zbgq3c.jpg');
     background-size: cover;
     background-position: center;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+}
+
+.herosection .overlay {
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.9), transparent);
+    z-index: 1;
+}
+
+.herosection .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
     color: white;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .herosection h1 {
-    font-size: 48px;
-    text-align: center;
-    line-height: 0.1;
-
+    font-size: 6rem;
+    font-family: 'Times New Roman', serif;
+    margin-bottom: 8px;
+    animation: fade-in 0.5s ease 0.5s forwards;
+    opacity: 0;
 }
 
 .herosection p {
-    font-size: 18px;
-    text-align: center;
-    margin-bottom: 1rem; /* Adjust the bottom margin as needed */
-    line-height: 0.1; /* Adjust line height for better readability */
+    font-size: 1.25rem;
+    margin-bottom: 8px;
+    animation: fade-in 0.5s ease 1s forwards;
+    opacity: 0;
+}
+
+.join-button {
+    background-color: var(--gold);
+    color: var(--deep-blue);
+    padding: 15px 30px;
+    border-radius: 9999px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    animation: fade-in 0.5s ease 1.5s forwards;
+    opacity: 0;
+}
+
+.join-button:hover {
+    background-color: yellow;
+    transform: scale(1.1);
+}
+
+@keyframes fade-in {
+    to {
+        opacity: 1;
+    }
 }
