--- a/readerspalacev1/src/styles/heroSection.css
+++ b/readerspalacev1/src/styles/heroSection.css
@@ -48,7 +48,7 @@
     margin-bottom: 8px;
     animation: fade-in 0.5s ease 1s forwards;
     opacity: 0;
-    padding: 1rem;
+    padding-bottom: 1rem;
 }
 
 .join-button {
