--- a/readerspalacev1/src/styles/Button.css
+++ b/readerspalacev1/src/styles/Button.css
@@ -1,3 +1,6 @@
+@import url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/styles/theme.css');
+
+
 .join-button {
     background-color: var(--gold); /* Gold color from theme.css */
     color: var(--deep-blue); /* Deep blue color from theme.css */
