--- a/readerspalacev1/src/styles/Navbar.css
+++ b/readerspalacev1/src/styles/Navbar.css
@@ -3,23 +3,49 @@
 
 @import url('/Users/jazzyme/Documents/GitHub/readersPalace/readerspalacev1/src/styles/theme.css');
 
-nav {
-    background-color: #002366; /* Deep Blue */
-    color: #FFFFF0; /* Ivory */
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    font-family: 'Arial', sans-serif; /* Example font */
-  }
-  
-  nav button {
-    background: none;
-    border: none;
-    color: inherit;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  nav button:hover {
-    text-decoration: underline;
-  }
+/* src/styles/Navbar.css */
+.app-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.navigationBar {
+  background-color: black;
+  color: gold;
+  padding: 16px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  gap: 20px; /* Adjust the space between links */
+}
+
+.nav-links a {
+  color: gold;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.nav-links a:hover {
+  color: #FFD700; /* Lighter shade of gold for hover effect */
+}
+
+.brand span {
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.brand span:hover {
+  color: #FFD700;
+}
