--- a/readerspalacev1/src/styles/Navbar.css
+++ b/readerspalacev1/src/styles/Navbar.css
@@ -7,6 +7,11 @@
 
 /* src/styles/Navbar.css */
 
+.readers-palace {
+  color: gold;
+  font-weight: bold;
+  font-size: 1.5em; /* adjust as needed */
+}
 .navigationbar {
   background-color: black; /* bg-black */
   color: gold; /* text-gold */
@@ -32,12 +37,13 @@
 
 .navigationbar li a {
   display: block;
-  color: white;
+  color: gold;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: small;
 }
 
 .navigationbar li a:hover {
-  background-color: #111; /* Changes the background color when hovered */
+  color: yellow; /* Changes the background color when hovered */
 }
