--- a/readerspalacev1/src/styles/Navbar.css
+++ b/readerspalacev1/src/styles/Navbar.css
@@ -43,7 +43,7 @@
   display: block;
   color: gold;
   text-align: center;
-  padding: 16px;
+  padding: 14px 16px 14px 16px;
   text-decoration: none;
   
 }
