--- a/readerspalacev1/src/styles/Navbar.css
+++ b/readerspalacev1/src/styles/Navbar.css
@@ -21,6 +21,7 @@
   z-index: 50; /* z-50 */
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* shadow-md */
   transition: all 0.3s; /* transition-all duration-300 */
+  justify-content: center;
   /* Add other styles for the navigation bar */
 }
 
