--- a/readerspalacev1/src/styles/FeatureSection.css
+++ b/readerspalacev1/src/styles/FeatureSection.css
@@ -3,7 +3,10 @@
 .feature-section {
     background-color: var(--ivory);
     color: var(--deep-blue);
-    padding: 20px;
+    padding-top: 1rem;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 1rem;
     text-align: center;
   }
   
