--- a/readerspalacev1/src/styles/FeatureSection.css
+++ b/readerspalacev1/src/styles/FeatureSection.css
@@ -4,8 +4,8 @@
     background-color: var(--ivory);
     color: var(--deep-blue);
     padding-top: 5rem;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 5rem;
+    padding-right: 5rem;
     padding-bottom: 5rem;
     text-align: center;
   }
