--- a/readerspalacev1/src/styles/FeatureSection.css
+++ b/readerspalacev1/src/styles/FeatureSection.css
@@ -4,15 +4,16 @@
     background-color: var(--ivory);
     color: var(--deep-blue);
     padding-top: 5rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 5rem;
     text-align: center;
   }
   
   .feature-section h2 {
     font-size: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
+    padding: 10rem;
   }
   
   .feature-section p {
