--- a/readerspalacev1/src/styles/FeatureSection.css
+++ b/readerspalacev1/src/styles/FeatureSection.css
@@ -13,7 +13,8 @@
   .feature-section h2 {
     font-size: 2rem;
     margin-bottom: 3rem;
-    padding: 10rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
   }
   
   .feature-section p {
