--- a/readerspalacev1/src/App.css
+++ b/readerspalacev1/src/App.css
@@ -1,21 +1,14 @@
-/* Reset default browser padding and margin */
-/* src/App.css */
-
-* {
-  padding-top: 0;
-  padding-left: 0;
-}
-
-
-html, body, #root {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-  }
+/* Reset default browser padding and margin *
   
   body {
     /* Additional styles to ensure full height */
     display: flex;
     flex-direction: column;
   }
+
+  /* Add this to your App.css */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
