--- a/readerspalacev1/src/App.css
+++ b/readerspalacev1/src/App.css
@@ -1,4 +1,5 @@
-/* Reset default browser padding and margin *
+/* Reset default browser padding and margin */
+
   
   body {
     /* Additional styles to ensure full height */
