--- a/readerspalacev1/src/App.css
+++ b/readerspalacev1/src/App.css
@@ -1,20 +1,18 @@
 /* Reset default browser padding and margin */
-
+html, body, #root {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
   
   body {
     /* Additional styles to ensure full height */
     display: flex;
     flex-direction: column;
   }
-
-  /* Add this to your App.css */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-}
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
