--- a/readerspalacev1/src/styles/HeaderSection.css
+++ b/readerspalacev1/src/styles/HeaderSection.css
@@ -13,8 +13,11 @@
 
 .header-section h1 {
     font-size: 3em; /* Large title */
+    margin-bottom: 40px;
+    
 }
 
 .header-section p {
     font-size: 1.5em; /* Smaller description */
+    margin-bottom: 40px;
 }
